# Start-Right

./: Cargo.toml  License.md  README.MD  sample.env  techstack.md  techstack.yml
code_templates/: index_template.html  main_websever_template copy.rs  main_websever_template.rs  websever_template copy.rs
frontend/: index.html
frontend_index/: index.html
frontend_react_templates/: package.json  vite.config.ts.timestamp-1700261714769-7f2b68af04cab.mjs
frontend_react_templates/src/components/pages/: PageOne.tsx  PageTwo.tsx
frontend_react_templates/src/components/shared/: Footer.tsx  Logo.tsx  Navigation.tsx
frontend_react_templates/src/hooks/: useCall.tsx
schemas/: api_schema.json
src/: main.rs  main_web_template.rs
src/ai_macros/: ai_architect.rs  ai_backend.rs  ai_frontend.rs  ai_react_frontend.rs  mod.rs
src/helper_funcs/: cli_funcs.rs  command_line.rs  general_funcs.rs  mod.rs
src/llm_external_api_calls/: api_calls.rs  mod.rs
src/models/: mod.rs
src/models/agents_manager/: agent_manager.rs  mod.rs
src/models/ai_agent_skeleton/: basic_agent.rs  basic_traits.rs  mod.rs
src/models/ai_agents/: agent_architect.rs  agent_backend.rs  agent_content_traits.rs  agent_frontend.rs  agent_react_component.rs  agent_react_frontend.rs  agent_react_structs.rs  mod.rs
src/models/general_http_content/: llm_content_structure.rs  mod.rs
