[package]
name = "start_right"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main_web_template"
path = "src/main_web_template.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
crossterm = "0.27.0"
async-trait = "0.1.68"
webbrowser = "0.8.9"
strum = "0.25.0"
strum_macros = "0.25.3"
ai_functions = "0.1.1"
actix-web = "4.3.1"
actix-cors = "0.6.4"
rand = "0.8.5"
actix-files = "0.6.2"
termcolor = "1.3.0"

